--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "argon2": "^0.30.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
-    "express-validator": "^7.0.1"
+    "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
